--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>DevBook - Bootstrap 5 Book/eBook Landing Page Template For Developers</title>
+    <title>DWP Bapemkesra Surabaya</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
